--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-preset-es2015": "^6.24.1",
     "express": "^4.15.3",
     "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth20": "^1.0.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   }
